style.css
body {background-color: white}
*{margin:0}
h2{font-size:1.3em;
color: white;
padding:10px;
font-family: 'Fira Sans', sans-serif;
font-weight:500;
}
h3{font-size:1em;
    color: white;
    padding:10px;
    }

p {font-size:0.8em;
color: white;
padding:10px;}
* {font-family: 'Noto Serif', serif;font-weight:300;}

    .body1>* {text-align: justify;}
    .body2>* {text-align: justify;}


.header {
  grid-area: header;
  text-align:center;
  display: grid;
  grid-template-columns: minmax( 270px, 1fr) auto;
  grid-template-rows: 1fr 1fr;
  grid-gap: 0px;
  grid-template-areas: 
    "brand brand"
    "GlobalNav tools";
}

.brand{
    grid-area: brand;
    background:rgb(123, 168, 93)
}


.animTxt {
    text-shadow: 3px 3px 3px   #000000;
    animation-duration: 3s;
  animation-name: opacity ;
  animation-iteration-count:infinite;
  cursor: pointer;
}

.shadowTxt {
    text-shadow: 3px 3px 3px   #000000;
}

@keyframes opacity {
from {
    opacity: 0;
  }
  50% {opacity: 1;}
to 
{
    opacity: 0;
  }
  
}




.GlobalNav{
    grid-area: GlobalNav;
    background: rgb(82, 121, 65);
    display:flex;
    align-items: center;
    justify-content:center;
}




ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
  }
.navbutton{
    display: inline-block;
    margin:0;
   font-size: 16px;
   color: rgb(255, 255, 255);
   padding: 4px 4px;
   cursor: pointer;
   text-decoration: none;
   border-width: 0px;
}
.scale{
    display:flex;
    transition: all 300ms;
    background: rgb(82, 121, 65);
}
.scale:hover {transform: scale(1.2);
    box-shadow: 0px -1px 28px 0px rgba(0,0,0,0.75);
    background: rgb(171, 219, 139);
    ;

}

.tools{
    background:rgb(82, 121, 65);
    grid-area: tools;
    
}

.hero {

background-image: url("https://cdn.pixabay.com/photo/2014/12/09/19/17/fir-562247_960_720.jpg");
background-position: center;
background-color: #cccccc;
height: auto;
background-size: cover;
grid-area: hero;

display: grid;
grid-template-columns:  1fr;
grid-template-rows:  1fr;
grid-gap: 5px;
grid-template-areas: 
"callToAction";

}
.callToAction{
grid-area:callToAction;
display: flex;
align-items: center;
justify-content: center;
font-size: 43px;
color: rgb(255, 255, 255);
font-weight:500;
}

.feature{
grid-area:feature;
display: none;
text-align: center;
color: rgb(255, 255, 255);
}


.ad {
background: rgb(255, 255, 255);
grid-area: ad;
}

.ad1{           
    object-fit: cover;
    width: 100%;
    max-height: 320px; 
    display:block;
    


}
.ad2{display:none;
    margin:0; padding: 0px;   object-fit: cover;
    width: 100%;
    max-height: 300px; 
}
.body1 {
background: rgb(127, 163, 86);
grid-area: body1;
min-height: 200px;
display:flex;
}

 .body2 {
    background: rgb(127, 163, 86);
grid-area: body2;
min-height: 300px
}


.sidebar {
background-color: olivedrab;
  grid-area: sidebar;
  display: flex;
  flex-wrap: wrap; 
}
.imgContainer {
        position: relative;
      }

.sidebarLink{
    background-color: olivedrab;
    border-top: white solid 2px;
    border-bottom: white solid 2px;
    width: 100%;

}
.sidebarLink:hover {background-color: rgb(157, 175, 120);
cursor: pointer;}

.imgText {
    position: absolute;
    bottom: 50%;
    right: 50%;
    color: white;
    padding-left: 0px;
    padding-right: 0px;
}
 .footer{
     color: white;
     background: rgb(82, 121, 65);
  grid-area: footer;
  text-align: center;
 }
  .email { color: white;
    text-decoration: none;
  }

.container {
  font-size: 1.5em;
  min-height: 400px;
  width: 100%;
  background: rgb(255, 255, 255);
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 100px 220px 1fr auto auto 60px;
  grid-gap: 5px;
  grid-template-areas:
    "header"
    "hero"
    "body1"
    "ad"
    "body2"
    "footer";
}
.sidebar{
 display: none;
}
.header-grid{
grid-column: col 3 / span 2;
grid-row: row 2;
display: grid;
grid-gap: 0px;
grid-template-columns: 1fr 1fr;

}

.imageflex{
    display: flex;
    align-items: center;
justify-content: center;
}

@media (min-width: 576px){
  .sidebar{ display: flex;
}
.feature{ 
display: flex;
align-items: center;
justify-content: center;
}

.ad {margin-left:-10px}
.ad2{display:block;}
.container{
background: rgb(255, 255, 255);
grid-template-columns:  1fr 180px;
grid-template-rows:  50px minmax(300px, auto) 2fr auto auto 60px ;

grid-template-areas:
  " header header"
  " hero hero"
  " body1 ad"
  " body2 body2"
  " sidebar sidebar"
  " footer  footer";
        }

.header {
  background: rgb(255, 255, 255);
  grid-area: header;
  text-align:center;
  display: grid;
  grid-template-columns: 1fr minmax( 270px, 1fr) 180px;
  grid-template-rows: 1fr;
  grid-gap: 0px;
  grid-template-areas: 
    "brand GlobalNav tools";
    }

.hero {
display: grid;
grid-template-columns:  1fr;
grid-template-rows:  1fr 1fr;
grid-gap: 5px;
grid-template-areas: 
  "callToAction"
  "feature";
    }


@media (min-width: 992px){
  .ad {margin-left:0px}
  .ad2{display:none}

  .container{
    min-height: 100vh;
    grid-template-columns: 250px 300px 1fr 180px;
    grid-template-rows:  50px auto 1fr  60px ;
    grid-template-areas:
      "header header header header"
      "hero hero hero ad"
      "body1 body2 body2 sidebar"
      "footer footer footer footer";
        }

    .hero {
    display: grid;
    grid-template-columns:  1fr 1fr;
    grid-template-rows: 1fr;
    grid-gap: 5px;
    grid-template-areas: 
    "feature callToAction";
    }
}}

